// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it returns immediately if the callback returns the value before any mutations 1`] = `
<div
  data-test-attribute="something changed once"
>
  <div
    data-testid="initial-element"
  />
</div>
`;

exports[`it throws if timeout is exceeded 1`] = `
Array [
  [Error: Timed out in waitForElement.],
]
`;

exports[`it throws if timeout is exceeded 2`] = `
<div
  data-test-attribute="something changed twice"
/>
`;

exports[`it throws the same error that the callback has thrown if timeout is exceeded 1`] = `
Array [
  [Error: Unable to find an element by: [data-testid="test"]

[36m<div[39m
  [33mdata-test-attribute[39m=[32m"something changed twice"[39m
[36m/>[39m],
]
`;

exports[`it throws the same error that the callback has thrown if timeout is exceeded 2`] = `
<div
  data-test-attribute="something changed twice"
/>
`;

exports[`it waits characterData mutation 1`] = `
<div>
  <div>
    initial text
  </div>
</div>
`;

exports[`it waits characterData mutation 2`] = `
<div>
  <div>
    new text
  </div>
</div>
`;

exports[`it waits for the callback to return a value and only reacts to DOM mutations 1`] = `
<div>
  <div
    data-testid="initial-element"
  />
  <div
    data-testid="another-element-that-causes-mutation-1"
  />
  <div
    data-testid="another-element-that-causes-mutation-2"
  />
  <div
    data-testid="another-element-that-causes-mutation-3"
  />
  <div
    data-testid="another-element-that-causes-mutation-4"
  />
  <div
    data-testid="another-element-that-causes-mutation-5"
  />
  <div
    data-testid="the-element-we-are-looking-for"
  />
</div>
`;

